fixed sonar critical (new Integer())